--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Ali Osman's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +12,12 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1>
+						<strong>I'm Ali</strong>, CE Student @ UBC<br />
+					</h1>
+					<h1>
+						I like building cool things<br />
+				    </h1>
 				</div>
 			</header>
 
@@ -120,7 +118,6 @@
 				<!--
 					<section id="four">
 						<h2>Elements</h2>
-
 						<section>
 							<h4>Text</h4>
 							<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
@@ -148,16 +145,13 @@
 							<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
 							<h5>Preformatted</h5>
 							<pre><code>i = 0;
-
 while (!deck.isInOrder()) {
 print 'Iteration ' + i;
 deck.shuffle();
 i++;
 }
-
 print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</section>
-
 						<section>
 							<h4>Lists</h4>
 							<div class="row">
@@ -232,7 +226,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</div>
 							</div>
 						</section>
-
 						<section>
 							<h4>Table</h4>
 							<h5>Default</h5>
@@ -280,7 +273,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</tfoot>
 								</table>
 							</div>
-
 							<h5>Alternate</h5>
 							<div class="table-wrapper">
 								<table class="alt">
@@ -327,7 +319,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</table>
 							</div>
 						</section>
-
 						<section>
 							<h4>Buttons</h4>
 							<ul class="actions">
@@ -356,7 +347,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<li><span class="button disabled">Default</span></li>
 							</ul>
 						</section>
-
 						<section>
 							<h4>Form</h4>
 							<form method="post" action="#">
@@ -408,7 +398,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</div>
 							</form>
 						</section>
-
 						<section>
 							<h4>Image</h4>
 							<h5>Fit</h5>
@@ -430,7 +419,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 							<p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 						</section>
-
 					</section>
 				-->
 
@@ -440,14 +428,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+						<li><a href="https://www.github.com/Jailior" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ali-osman1/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:ahusseinse@yahoo.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                	</ul>
 				</div>
 			</footer>
 
