--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon.svg" type="image/svg+xml" sizes="any" />
 	</head>
 	<body class="is-preload">
 
@@ -36,36 +37,36 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>OpenSearch</h3>
+								<a href="images/thumbs/open-search-image.png" class="image fit thumb"><img src="images/thumbs/open-search-image.png" alt="" /></a>
+								<h3><a href="https://opensearchengine.app/">OpenSearch</a></h3>
 								<p>A distributed web search engine that follows the Google search architecture including crawling, indexing and querying.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Door Monitoring System</h3>
+								<a href="images/thumbs/door-sense-gui-image.png" class="image fit thumb"><img src="images/thumbs/door-sense-gui-image.png" alt="" /></a>
+								<h3><a href="https://github.com/Jailior/DoorSense">Door Monitoring System</a></h3>
 								<p>Using an ESP32-CAM module to monitor an image frame and perform edge detection where readings streamed via TCP to a C++ server.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Nighttime Pothole Detection</h3>
+								<a href="images/thumbs/glow-patch-embeddings.png" class="image fit thumb"><img src="images/thumbs/glow-patch-embeddings.png" alt="" /></a>
+								<h3><a href="https://github.com/asalee01/Glow-patch">Nighttime Pothole Detection</a></h3>
 								<p>We present a baseline object detector using YOLO and fine-tuning on the Nighttime Pothole Dataset. Over 50 epochs the model the model achieved a 1.6% improvement compared to academic benchmarks.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Mini Shell</h3>
+								<a href="images/thumbs/crash-shell-image.png" class="image fit thumb"><img src="images/thumbs/crash-shell-image.png" alt="" /></a>
+								<h3><a href="#three">Mini Shell</a></h3>
 								<p>A minimal Linux shell in C, implementing command parsing, process creation and synchronous job control</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>HTTP Server</h3>
+								<a href="images/thumbs/http-sever-in-c-image.png" class="image fit thumb"><img src="images/thumbs/http-sever-in-c-image.png" alt="" /></a>
+								<h3><a href="https://github.com/Jailior/http-server-c">HTTP Server in C</a></h3>
 								<p>A HTTP server made in C with local scalability and file serving.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Sand Simulation Engine - WIP</h3>
+								<a href="images/thumbs/sand-simulation-wip-image.png" class="image fit thumb"><img src="images/thumbs/sand-simulation-wip-image.png" alt="" /></a>
+								<h3><a href="https://github.com/Jailior/sand-simulation-engine">Sand Simulation Engine - WIP</a></h3>
 								<p>A pixel based physics simulation engine made with OpenGL and C++</p>
 							</article>
 						</div>
