--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Cellular Automata Canvas -->
+		<canvas id="cellular-automata-canvas"></canvas>
+
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
@@ -410,6 +413,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/cellular-automata.js"></script>
 
 	</body>
 </html>
