--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						</header>
 						<p>I am a computer engineering student at the University of British Columbia 
 							and I have a passion for software and firmware development. I love building projects in
-							 software, machine learning, computer architecture, games and embedded systems.</p>
+							 software, machine learning, computer architecture, <span id="games-toggle" style="cursor: pointer; text-decoration: underline;">games</span> and embedded systems.</p>
 					</section>
 
 				<!-- Two -->
