--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<h2>Welcome to my Portfolio!</h2>
 						</header>
 						<p>I am a computer engineering student at the University of British Columbia 
-							and I have a passion for software and firmware development. I love building projects in
+							and I have a passion for software and firmware development. I like building projects in
 							 software, machine learning, computer architecture, <span id="games-toggle" style="cursor: pointer; text-decoration: underline;">games</span> and embedded systems.</p>
 					</section>
 
