--- a/index.html
+++ b/index.html
@@ -48,32 +48,32 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/open-search-image.png" class="image fit thumb"><img src="images/thumbs/open-search-image.png" alt="" /></a>
 								<h3 class="terminal-text-static"><a href="https://opensearchengine.app/">OpenSearch</a></h3>
-								<p class="terminal-text-static">A distributed web search engine that follows the Google search architecture including crawling, indexing and querying.</p>
+								<p class="terminal-text-static"><strong>A distributed web search engine that follows the Google search architecture including crawling, indexing and querying.</strong></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/door-sense-gui-image.png" class="image fit thumb"><img src="images/thumbs/door-sense-gui-image.png" alt="" /></a>
 								<h3 class="terminal-text-static"><a href="https://github.com/Jailior/DoorSense">Door Monitoring System</a></h3>
-								<p class="terminal-text-static">Using an ESP32-CAM module to monitor an image frame and perform edge detection where readings streamed via TCP to a C++ server.</p>
+								<p class="terminal-text-static"><strong>Using an ESP32-CAM module to monitor an image frame and perform edge detection where readings streamed via TCP to a C++ server.</strong></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/glow-patch-embeddings.png" class="image fit thumb"><img src="images/thumbs/glow-patch-embeddings.png" alt="" /></a>
 								<h3 class="terminal-text-static"><a href="https://github.com/asalee01/Glow-patch">Nighttime Pothole Detection</a></h3>
-								<p class="terminal-text-static">We present a baseline object detector using YOLO and fine-tuning on the Nighttime Pothole Dataset. Over 50 epochs the model the model achieved a 1.6% improvement compared to academic benchmarks.</p>
+								<p class="terminal-text-static"><strong>We present a baseline object detector using YOLO and fine-tuning on the Nighttime Pothole Dataset. Over 50 epochs the model the model achieved a 1.6% improvement compared to academic benchmarks.</strong></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/crash-shell-image.png" class="image fit thumb"><img src="images/thumbs/crash-shell-image.png" alt="" /></a>
 								<h3 class="terminal-text-static"><a href="#three">Mini Shell</a></h3>
-								<p class="terminal-text-static">A minimal Linux shell in C, implementing command parsing, process creation and synchronous job control</p>
+								<p class="terminal-text-static"><strong>A minimal Linux shell in C, implementing command parsing, process creation and synchronous job control</strong></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/http-sever-in-c-image.png" class="image fit thumb"><img src="images/thumbs/http-sever-in-c-image.png" alt="" /></a>
 								<h3 class="terminal-text-static"><a href="https://github.com/Jailior/http-server-c">HTTP Server in C</a></h3>
-								<p class="terminal-text-static">A HTTP server made in C with local scalability and file serving.</p>
+								<p class="terminal-text-static"><strong>A HTTP server made in C with local scalability and file serving.</strong></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/sand-simulation-wip-image.png" class="image fit thumb"><img src="images/thumbs/sand-simulation-wip-image.png" alt="" /></a>
 								<h3 class="terminal-text-static"><a href="https://github.com/Jailior/sand-simulation-engine">Sand Simulation Engine - WIP</a></h3>
-								<p class="terminal-text-static">A pixel based physics simulation engine made with OpenGL and C++</p>
+								<p class="terminal-text-static"><strong>A pixel based physics simulation engine made with OpenGL and C++</strong></p>
 							</article>
 						</div>
 					</section>
@@ -83,8 +83,8 @@
 						<h2 class="terminal-text-static"><strong>Get in touch!</strong></h2>
 						<p class="terminal-text-static"><strong>Looking forward to hearing from you!</strong></p>
 						<ul class="actions stacked">
-							<li><strong>Email: </strong><a href="mailto:ahusseinse@yahoo.com">ahusseinse@yahoo.com</a></li>
-							<li><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/ali-osman1/">linkedin.com/in/ali-osman1</a></li>	
+							<li class="terminal-text-static"><strong>Email: </strong><a href="mailto:ahusseinse@yahoo.com">ahusseinse@yahoo.com</a></li>
+							<li class="terminal-text-static"><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/ali-osman1/">linkedin.com/in/ali-osman1</a></li>	
 						</ul>
 					</section>
 
