dev theme pt3 w automata cursor only

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body class="is-preload">
 
 		<!-- Cellular Automata Canvas -->
-		<!-- <canvas id="cellular-automata-canvas"></canvas> -->
+		<canvas id="cellular-automata-canvas"></canvas>
 
 		<!-- Header -->
 			<header id="header">
