dev theme manual color changes

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 							<h2 class="terminal-text-static"><strong>Welcome to my Portfolio!</strong></h2>
 						</header>
 						<div class="terminal-intro" id="terminal-intro">
-							<span class="terminal-prompt">$ </span><span class="terminal-text" id="terminal-text"></span><span class="terminal-cursor blink" id="terminal-cursor"></span>
+							<span class="terminal-prompt">root@ali $ </span><span class="terminal-text" id="terminal-text"></span><span class="terminal-cursor blink" id="terminal-cursor"></span>
 						</div>
 						<p style="display: none;" id="intro-original">I am a computer engineering student at the University of British Columbia 
 							and I have a passion for software and firmware development. I like building projects in
-							 software, machine learning, computer architecture, <span id="games-toggle" style="cursor: pointer; text-decoration: underline;">games</span> and embedded systems.</p>
+							 software, machine learning, computer architecture, <span class="terminal-prompt" id="games-toggle" style="cursor: pointer; text-decoration: underline;">games</span> and embedded systems.</p>
 					</section>
 
 				<!-- Two -->
